Fixes the first item from issue #4, episode checkboxes now vertically align with their labels.

--- a/app/javascript/packs/application.scss
+++ b/app/javascript/packs/application.scss
@@ -115,15 +115,13 @@ $fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
 }
 
 .season-span {
-  //text-align: end;
 }
 
 .episode-label {
-  margin: 0 !important;
 }
 
 .episode-check {
-  align-self: center;
+  margin-top: 6px;
 }
 
 .episodes-flex {
